--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,7 +84,8 @@ body {
 
 .ql-toolbar .ql-formats:not(:last-child) {
   border-right: 1px solid #dcdcdc !important;
-  padding-right: 12px !important;
+  padding-right: 6px !important;
+  margin-right: 6px !important;
 }
 
 .ql-container {
