render messages list group by days

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,8 +125,6 @@ body {
   @apply truncate;
 }
 
-
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -134,4 +132,9 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.messages-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #dcdcdc #f8f8f8;
 }
